17. Scanner [#504791 #441916]